# flutter_engine_context

./: .metadata  README.md  pubspec.yaml
.github/workflows/: check_and_lint.yml
android/src/main/java/dev/nativeshell/flutter_engine_context/: FlutterEngineContextPlugin.java
ios/Classes/: EngineContextPlugin.m
lib/: flutter_engine_context.dart
linux/: CMakeLists.txt  engine_context_plugin.cc
linux/include/engine_context/: engine_context_plugin.h
macos/Classes/: EngineContextPlugin.m
rust/: Cargo.toml
rust/src/: android.rs  darwin.rs  lib.rs  linux.rs  windows.rs
windows/: CMakeLists.txt  engine_context_plugin.cpp  engine_context_plugin.h  engine_context_plugin_c_api.cpp  flutter_engine_context_plugin.cpp
windows/include/engine_context/: engine_context_plugin_c_api.h
