[package]
name = "flutter_engine_context"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(target_os = "android")'.dependencies]
log = "0.4"
jni = "0.19"
once_cell = "1.8.0"
android_logger = "0.11"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc = "0.2.7"
cocoa = "0.24"
